Fixed spacing when date inputs on create booking focused, refactor review state

--- a/frontend/src/components/CreateBookingTile/CreateBookingTile.css
+++ b/frontend/src/components/CreateBookingTile/CreateBookingTile.css
@@ -32,6 +32,7 @@
 .create_booking_tile_dates{
     display: flex;
     gap: 5px;
+    max-height: 68px;
 }
 
 .input_label {
@@ -81,6 +82,8 @@
 #create_booking_tile_checkin_input:focus,
 #create_booking_tile_checkout_input:focus {
     z-index: 1;
+    /* border: 3px solid black;
+    border-radius: 10px; */
 }
 
 .create_booking_tile_reserve{
